add attribute wip
